--- a/09.apache/03.json包/04.jsackson.md
+++ b/09.apache/03.json包/04.jsackson.md
@@ -16,7 +16,7 @@
 
 ObjectMapper mapper = **new** ObjectMapper(); //转换器
 
-![转换器](./assets/转换器.png) 
+![转换器](assets/转换器.png) 
 
 ###  1.2.2 特殊类型转换
 
