nodejs 和 es 模块化

--- a/04.web前端/10.node.js/1.安装-node环境搭建.md
+++ b/04.web前端/10.node.js/1.安装-node环境搭建.md
@@ -60,10 +60,29 @@ https://blog.csdn.net/weixin_42113124/article/details/94393671
 
 使用yarn 启动，目前npm 不行（ps: 我也不知道为什么）
 
-
+>  "serve": "cross-env NODE_OPTIONS=\"--max_old_space_size=4096\" vue-cli-service serve",
 
 ### 2.3.3 [vue 启动报错Error: Cannot find module 'E:\xx\xx\xx\dll\manifest.json']
 
 `npm run build:dll`
 
 https://www.cnblogs.com/js1314/p/12528073.html
+
+
+
+## 2.4 前端打包问题
+
+### 2.4.1 默认meta.jon
+
+这里可能弄成undefined
+
+![门户打包项目路径](./assets/门户打包项目路径.png)
+
+
+
+## 2.5 v3.5.3 登录问题
+
+必须用前端地址登录，完全代理他
+
+![登录地址](./assets/登录地址.png)
+
