--- a/04.web前端/10.node.js/02.node及npm命令.md
+++ b/04.web前端/10.node.js/02.node及npm命令.md
@@ -1,3 +1,5 @@
+[TOC]
+
 # 1.node
 
 ## 1.1 node
@@ -32,7 +34,7 @@ $ npm install -g cnpm --registry=https://registry.npm.taobao.org
 
 # 2.npm
 
-## 2.1 npm
+## 2.1 npm/cnpm
 
 ### 2.1.1  **概念**
 
@@ -99,6 +101,12 @@ https://yarn.bootcss.com/docs/cli/
 
 `yarn`  运行
 
+更新命令：
+
+​	yarn upgrade @kun/meta-webpack-plugin
+
+​	yarn upgrade-interactive --latest
+
 
 
 ### 2.2.3 yarn 安装问题
@@ -106,6 +114,12 @@ https://yarn.bootcss.com/docs/cli/
 修改Yarn的全局安装和缓存位置
 
 https://www.cnblogs.com/Jimc/p/11121632.html
+
+
+
+### 2.2.4 yarn 和 npm 命令对应
+
+![命令对应](./assets/命令对应.png)
 
 
 
