--- a/07.版本权限控制工具/02.git/03.本地库.md
+++ b/07.版本权限控制工具/02.git/03.本地库.md
@@ -71,11 +71,11 @@ https://blog.csdn.net/liuchunming033/article/details/87195568
 
 4.0.0 提交
 
-![4.0提交](D:/code/laolan/landocx/landocx/07.%E7%89%88%E6%9C%AC%E6%9D%83%E9%99%90%E6%8E%A7%E5%88%B6%E5%B7%A5%E5%85%B7/02.git/assets/4.0%E6%8F%90%E4%BA%A4.png)
+![4.0提交](./assets/4.0提交.png)
 
 切换3.5.3 拉取，提交，推送
 
-![切换3.5.3](D:/code/laolan/landocx/landocx/07.%E7%89%88%E6%9C%AC%E6%9D%83%E9%99%90%E6%8E%A7%E5%88%B6%E5%B7%A5%E5%85%B7/02.git/assets/%E5%88%87%E6%8D%A23.5.3.png)
+![切换3.5.3](./assets/切换3.5.3.png)
 
 
 
