--- a/05.java web/04.dao/07.基于druid动态数据源.md
+++ b/05.java web/04.dao/07.基于druid动态数据源.md
@@ -18,6 +18,25 @@
 
 ​	通过ThreadLocal设置该线程中访问数据源的key，起到很好的保护对象的作用。总结一下，个人认为使用ThreadLocal的场景最好满足两个条件，一是该对象不需要在多线程之间共享；二是该对象需要在线程内被传递。
 
+## 1.3 baseDao单列模式
+
+```
+BaseDruidDao baseDruidDao = BaseDruidDaoImpl.getInstance();
+```
+
+
+
+## 1.4 问题
+
+### 1.4.1 connection holder is null
+
+<https://blog.csdn.net/xiaomin1991222/article/details/50981955>
+
+```java
+properties.setProperty("removeAbandoned", "true");
+properties.setProperty("removeAbandonedTimeout", "1800");
+```
+
 
 
 # 2 SpringBoot 集成
