--- a/05.java web/04.dao/05.连接池-05.Druid连接池.md
+++ b/05.java web/04.dao/05.连接池-05.Druid连接池.md
@@ -129,68 +129,55 @@ public class MyThreadLocal<T> {
 
  
 
-## 3.2 **关于Jdbc中使用ThreadLocal**
+## 3.2 **关于Connection中使用ThreadLocal**
 
 ![ThreadLocal](./assets/ThreadLocal.png)
 
  
 
-## 3.3 **Druid连接池，线程事务**
+# 4 **线程事务**
 
- com.prosay.utils.DruidUtils
+## 4.1 事务
+
+com.lan.bmwai.dao.single.test.TestTran
 
 ```java
-public class DruidUtils {
+ try {
+            DruidUtil.openTransaction();
 
-	// 无参构造方法会去获取c3p0-config.xml配置文件中的默认配置信息default-config
-	//static DataSource ds = new ComboPooledDataSource();
-	// 获取配置文件中named-config name="oracle11gorcl"对应的配置
-	static DruidDataSourceFactory f = new DruidDataSourceFactory();
-	static DataSource ds = null;
-	static{
-		Properties properties = new Properties();
-		try {
-			properties.load(DruidUtils.class.getClassLoader().getResourceAsStream("db.properties"));
-			properties.setProperty("driverClassName", properties.getProperty("jdbc.driver"));
-			properties.setProperty("url", properties.getProperty("jdbc.url"));
-			properties.setProperty("username", properties.getProperty("jdbc.user"));
-			properties.setProperty("password", properties.getProperty("jdbc.password"));
-			ds = f.createDataSource(properties);	// 由此倒推
-		} catch (Exception e) {
-			e.printStackTrace();
-		}
-	}
-	public static Connection getConnection(){
-		try {
-			return ds.getConnection();
-		} catch (SQLException e) {
-			return null;
-		}
-	}
-
-	public static void closeConnection(){
-
-	}
-
-	public static void main(String[] args) {
-		for (int i = 0; i < 4; i++) {
-			System.out.println(DruidUtils.getConnection());
-		}
-	}
-}
+            BaseDao baseDao = BaseDaoImpl.getInstance();
+           
+            DruidUtil.commitTransaction();
+        } catch (Exception e) {
+            e.printStackTrace();
+            DruidUtil.rollbackTransaction();
+        }
 ```
 
- 
 
- 
 
- 
+## 4.2 事务节点回滚
 
- 
+ com.lan.bmwai.dao.single.test.TestTranPoint
 
- 
+```java
+Savepoint sp = null;
+        try {
+            DruidUtil.openTransaction();
 
- 
+            BaseDao baseDao = BaseDaoImpl.getInstance();
+
+            DruidUtil.commitTransaction();
+        } catch (ArithmeticException npe){
+            DruidUtil.rollbackTransPoint(sp);
+        } catch (Exception e) {
+            e.printStackTrace();
+            DruidUtil.rollbackTransaction();
+        }
+
+```
+
+
 
  
 
