--- a/专题面试/00.专题总览.md
+++ b/专题面试/00.专题总览.md
@@ -16,13 +16,13 @@ ReentrantLock解决超卖问题
 
 基于数据库的分布式锁
 
-[06.基于redis分布式锁](../08.java ee扩展/02.缓存/04.redis/04.Spring data redis/11.基于redis分布式锁.md)
+[06.基于redis的分布式锁](../08.javaEE扩展/02.缓存/04.redis/04.Spring-data-redis/11.基于redis分布式锁.md)
 
 基于zookeeper的分布式锁
 
-基于curator分布式锁
+基于curator的分布式锁
 
-[09.基于redisson分布式锁](../08.java ee扩展/02.缓存/04.redis/05.redisson/11.基于redisson分布式锁.md)
+[09.基于redisson的分布式锁](../08.javaEE扩展/02.缓存/04.redis/05.redisson/11.基于redisson分布式锁.md)
 [10.分布式锁的对比](./专题课程/14.分布式锁/10.分布式锁的对比.md)
 
 
