--- a/16.运维/02.mysql/07.mysql-client定时任务备份数据库.md
+++ b/16.运维/02.mysql/07.mysql-client定时任务备份数据库.md
@@ -12,6 +12,6 @@
 
 ```
 crontab -e
-00 04 * * * nuhup sh ~/data/back.sh > ~/data/logs/mysql_log_$(date "+\%Y-\%m-\%d \%H:\%M:\%S").log 2>$1
+0 4 * * * nuhup sh ~/data/back.sh > ~/data/logs/mysql_log_$(date "+\%Y-\%m-\%d \%H:\%M:\%S").log &2>&1
 ```
 
