--- a/16.运维/02.mysql/07.mysql-client定时任务备份数据库.md
+++ b/16.运维/02.mysql/07.mysql-client定时任务备份数据库.md
@@ -1,4 +1,4 @@
-# mysql-client8.0.22安装
+# 1 mysql-client8.0.22安装
 
 [Linux下只安装MySQL Client_chenliang-CSDN博客](https://blog.csdn.net/weixin_43733154/article/details/108571308)
 
@@ -6,12 +6,14 @@
 
 
 
-# corntab定时任务
+# 2 corntab定时任务
 
 [解决crontab无法在普通用户执行问题_Rank92的博客-CSDN博客](https://blog.csdn.net/weixin_34273481/article/details/92920242?utm_medium=distribute.pc_relevant.none-task-blog-BlogCommendFromBaidu-2.control&depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendFromBaidu-2.control)
 
 ```
-crontab -e
-0 4 * * * nuhup sh ~/data/back.sh > ~/data/logs/mysql_log_$(date "+\%Y-\%m-\%d \%H:\%M:\%S").log &2>&1
+0 4 * * * nohup ~/data/back.sh >> ~/data/mysql_logs_`date`.out  2>&1 &
 ```
 
+普通用户使用crontab: [Linux下普通用户无法直接使用crontab问题 (hqew.com)](https://tech.hqew.com/news_1527951)
+
+ root 查看log: tail -f /var/log/cron, [如何查看crontab的日志记录-boyhack-51CTO博客](https://blog.51cto.com/461205160/1736383)
