--- a/16.运维/10.Docker/03.Dockerfile.md
+++ b/16.运维/10.Docker/03.Dockerfile.md
@@ -1,10 +1,232 @@
+# 1 常见命令
+
+## 1.1 常见命令
+
 ENV 
 
 RUN
 
+
+
+## 1.2 自带包
+
+就是jdk基础上环境自己准备好
+
 参看tomcat加密
 
+```shell
+# （这串数字是我已经创建好一个ubuntu镜像的镜像id，在这里作为tomcat的基础镜像
+FROM centos     
+MAINTAINER laolan
+# （这个环境变量用来表名该镜像模板的最后更新时间）
+ENV REFRESHED_AT 2020-12-10  
+#  Tomcat 编码 和 docker 环境一致
+ENV LANG C.UTF-8
+
+#切换镜像目录，进入/usr目录
+WORKDIR /usr/local
+#在/usr/下创建jdk目录,用来存放jdk文件
+RUN mkdir jdk1.8.0_144
+#在/usr/下创建tomcat目录，用来存放tomcat
+RUN mkdir kun-metaca-collect-3.5.3
+
+#将宿主机的jdk目录下的文件拷至镜像的/usr/jdk目录下
+ADD jdk1.8.0_144 /usr/local/jdk1.8.0_144/
+#将宿主机的tomcat目录下的文件拷至镜像的/usr/tomcat目录下
+ADD kun-metaca-collect-3.5.3 /usr/local/kun-metaca-collect-3.5.3/
+
+#设置环境变量
+ENV JAVA_HOME=/usr/local/jdk1.8.0_144
+ENV JRE_HOME=$JAVA_HOME/jre
+ENV CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar:$JRE_HOME/lib:$CLASSPATH
+ENV PATH=/sbin:$JAVA_HOME/bin:$PATH
+
+#公开端口
+EXPOSE 9091
+WORKDIR kun-metaca-collect-3.5.3
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-XX:+DisableAttachMechanism","-agentpath:bin/codelib.so","-jar","kun-metaca-collect-3.5.3-release.jar"]
+```
 
 
 
+## 1.3 From java:8
+
+
+
+
+
+# 2 安装加密tomat
+
+## 2.1 安装dam工程
+
+[使用Dockerfile创建一个tomcat镜像，并运行一个简单war包](https://www.cnblogs.com/hanmk/p/8541814.html)
+
+自己先上传一个jdk,tomcat 实际安装在docker 镜像中的/usr/local
+
+```shell
+# （这串数字是我已经创建好一个ubuntu镜像的镜像id，在这里作为tomcat的基础镜像
+FROM centos     
+MAINTAINER laolan
+# （这个环境变量用来表名该镜像模板的最后更新时间）
+ENV REFRESHED_AT 2020-12-09  
+#  Tomcat 编码 和 docker 环境一致
+ENV LANG C.UTF-8
+
+#切换镜像目录，进入/usr目录
+WORKDIR /usr/local
+#在/usr/下创建jdk目录,用来存放jdk文件
+RUN mkdir jdk1.8.0_144
+#在/usr/下创建tomcat目录，用来存放tomcat
+RUN mkdir tomcat-8.5.53-encrypt
+
+#将宿主机的jdk目录下的文件拷至镜像的/usr/jdk目录下
+ADD jdk1.8.0_144 /usr/local/jdk1.8.0_144/
+#将宿主机的tomcat目录下的文件拷至镜像的/usr/tomcat目录下
+ADD tomcat-8.5.53-encrypt /usr/local/tomcat-8.5.53-encrypt/
+
+#设置环境变量
+ENV JAVA_HOME=/usr/local/jdk1.8.0_144
+ENV JRE_HOME=$JAVA_HOME/jre
+ENV CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar:$JRE_HOME/lib:$CLASSPATH
+ENV PATH=/sbin:$JAVA_HOME/bin:$PATH
+
+#公开端口
+EXPOSE 8080
+#设置启动命令
+ENTRYPOINT ["/usr/local/tomcat-8.5.53-encrypt/bin/catalina.sh","run"]
+```
+
+```shell
+使用dcoker生成的地址，和端口
+mysql
+	spring.datasource.url=jdbc:mysql://172.17.0.6:3306/kun_dam
+
+redis
+	redis.host=172.17.0.7
+	redis.port=6379
+zookeeper
+	zk.hosts=192.168.0.129:12181,192.168.0.130:12181,192.168.0.131:12181	
+```
+
+```shell
+docker build -t tomcat-8.5.53-encrypt:3.5.3 .
+docker images
+
+docker run --name tomcat-3.5.3 --restart=always -p 18088:8080 \
+-v /data/product/tomcat-8.5.53-encrypt/webapps:/usr/local/tomcat-8.5.53-encrypt/webapps \
+-v /data/product/tomcat-8.5.53-encrypt/logs:/usr/local/tomcat-8.5.53-encrypt/logs \
+-d tomcat-8.5.53-encrypt:3.5.3
+```
+
+
+
+# 3 安装springboot
+
+## 3.1 安装 jar 形式
+
+自行百度
+
+https://www.cnblogs.com/yamiya/p/12585238.html
+
+
+
+## 3.2 安装zip 形式
+
+### 3.2.1 问题汇总
+
+SpringBoot启动 .properties失效 
+
+​	WORKDIR 到 jar 目录：https://www.jianshu.com/p/397929dbc27d
+
+
+
+### 3.2.2 安装元数据采集
+
+Dockfile
+
+WORKDIR kun-metaca-collect-3.5.3
+
+```shell
+# （这串数字是我已经创建好一个ubuntu镜像的镜像id，在这里作为tomcat的基础镜像
+FROM java:8    
+MAINTAINER laolan
+# （这个环境变量用来表名该镜像模板的最后更新时间）
+ENV REFRESHED_AT 2020-12-10  
+#  Tomcat 编码 和 docker 环境一致
+ENV LANG C.UTF-8
+
+VOLUME /tmp
+
+#切换镜像目录，进入/usr目录
+WORKDIR /usr/local
+#在/usr/下创建目录
+RUN mkdir kun-metaca-collect-3.5.3
+
+#将宿主机的tomcat目录下的文件拷至镜像的/usr/local/kun-metaca-collect-3.5.3目录下
+ADD kun-metaca-collect-3.5.3 /usr/local/kun-metaca-collect-3.5.3/
+
+#公开端口
+EXPOSE 9091
+WORKDIR kun-metaca-collect-3.5.3
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-XX:+DisableAttachMechanism","-agentpath:bin/codelib.so","-jar","kun-metaca-collect-3.5.3-release.jar"]
+```
+
+```properties
+zookeeper
+	zk.hosts=192.168.0.129:12181,192.168.0.130:12181,192.168.0.131:12181
+mysql	
+	spring.datasource.url = jdbc:mysql://172.17.0.6:3306/kun_dam
+```
+
+```shell
+docker build -t kun-metaca-collect-encrypt:3.5.3 .
+
+docker run --name kun-metaca-collect-3.5.3 --restart=always -p 19091:9091 \
+-d kun-metaca-collect-encrypt:3.5.3
+```
+
+### 3.2.2 安装数据质量
+
+Dockfile
+
+WORKDIR kun-dam-dqc-3.5.3
+
+```shell
+# （这串数字是我已经创建好一个ubuntu镜像的镜像id，在这里作为tomcat的基础镜像
+FROM java:8     
+MAINTAINER laolan
+# （这个环境变量用来表名该镜像模板的最后更新时间）
+ENV REFRESHED_AT 2020-12-10  
+#  Tomcat 编码 和 docker 环境一致
+ENV LANG C.UTF-8
+
+VOLUME /tmp
+
+#切换镜像目录，进入/usr目录
+WORKDIR /usr/local
+#在/usr/下创建tomcat目录，用来存放tomcat
+RUN mkdir kun-dam-dqc-3.5.3
+
+#将宿主机的tomcat目录下的文件拷至镜像的/usr/tomcat目录下
+ADD kun-dam-dqc-3.5.3 /usr/local/kun-dam-dqc-3.5.3/
+
+#公开端口
+EXPOSE 9092
+WORKDIR kun-dam-dqc-3.5.3
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-XX:+DisableAttachMechanism","-agentpath:bin/codelib.so","-jar","kun-dam-dqc-3.5.3.jar"]
+```
+
+```properties
+zookeeper
+	zk.hosts=192.168.0.129:12181,192.168.0.130:12181,192.168.0.131:12181
+mysql	
+	spring.datasource.url = jdbc:mysql://172.17.0.6:3306/kun_dam
+```
+
+```shell
+docker build -t kun-dam-dqc-encrypt:3.5.3 .
+
+docker run --name kun-dam-dqc-3.5.3 --restart=always -p 19092:9092 \
+-d kun-dam-dqc-encrypt:3.5.3
+```
 
