--- a/16.运维/10.Docker/09.Docker安装Portainer.md
+++ b/16.运维/10.Docker/09.Docker安装Portainer.md
@@ -1,10 +1,11 @@
-[docker-可视化容器管理工具Portainer – 运维派 (yunweipai.com)](http://www.yunweipai.com/34991.html)
 
-[(1条消息) Docker Portainer 安装与报错处理_小杭的博客-CSDN博客](https://blog.csdn.net/xiaohangblog/article/details/105513360)
+
 
 # 1 安装
 
+## 1.1  界面常用
 
+[docker-可视化容器管理工具Portainer – 运维派 (yunweipai.com)](http://www.yunweipai.com/34991.html)
 
 ## 1.2 配置文件安装（带汉化）
 
@@ -13,11 +14,33 @@
 [Docker 一键安装及Docker管理面板Portainer中文汉化 - 黄金国的大象 - 博客园 (cnblogs.com)](https://www.cnblogs.com/gaodi2345/p/13580259.html)
 
 ```
-docker run -d -p 29000:9000  \
+docker pull docker.io/portainer/portainer:1.24.1
+
+命名为 public ，把 Portainer-CN.zip 解压至里面
+
+docker run -d --privileged=true  -p 29000:9000  \
 --name portainer --restart always \
 -v /var/run/docker.sock:/var/run/docker.sock \
 -v /data/soft/portainer/data:/data \
 -v /data/soft/portainer/public:/public \
 portainer/portainer:1.24.1
+```
+
+
+
+## 1.3 问题
+
+[Docker Portainer 安装与报错处理](https://blog.csdn.net/xiaohangblog/article/details/105513360)
+
+```
+setenforce 0 
+```
+
+
+
+Docker Portainer 没权限
+
+```
+--privileged=true 
 ```
 
