--- a/16.运维/10.Docker/12.安装tomcat.md
+++ b/16.运维/10.Docker/12.安装tomcat.md
@@ -32,9 +32,12 @@ docker logs tomcat-test
 自己先上传一个jdk,tomcat 实际安装在docker 镜像中的/usr/local
 
 ```shell
-FROM centos     （这串数字是我已经创建好一个ubuntu镜像的镜像id，在这里作为tomcat的基础镜像
+# （这串数字是我已经创建好一个ubuntu镜像的镜像id，在这里作为tomcat的基础镜像
+FROM centos     
 MAINTAINER laolan
-ENV REFRESHED_AT 2020-12-09  （这个环境变量用来表名该镜像模板的最后更新时间）
+# （这个环境变量用来表名该镜像模板的最后更新时间）
+ENV REFRESHED_AT 2020-12-09  
+#  Tomcat 编码 和 docker 环境一致
 ENV LANG C.UTF-8
 
 #切换镜像目录，进入/usr目录
@@ -95,6 +98,8 @@ mysql
 redis
 	redis.host=172.17.0.7
 	redis.port=6379
+zookeeper
+	zk.hosts=192.168.0.129:12181,192.168.0.130:12181,192.168.0.131:12181	
 ```
 
 
