--- a/16.运维/10.Docker/02.安装docker及命令.md
+++ b/16.运维/10.Docker/02.安装docker及命令.md
@@ -21,7 +21,21 @@ Docker version 1.12.6, build 3e8e77d/1.12.6
 Created symlink from /etc/systemd/system/multi‐user.target.wants/docker.service to /usr/lib/systemd/system/docker.service.
 ```
 
-## 1.2 使用docker 用户
+## 1.2 镜像加速
+
+[Docker 镜像加速 | 菜鸟教程 (runoob.com)](https://www.runoob.com/docker/docker-mirror-acceleration.html)
+
+```shell
+vim /etc/docker/daemon.json
+{"registry-mirrors":["https://reg-mirror.qiniu.com/"]}
+
+systemctl daemon-reload
+systemctl restart docker
+```
+
+
+
+## 1.3 使用docker 用户
 
 从此之后不再使用root 用户
 
@@ -32,7 +46,7 @@ useradd -g docker docker   passwd docker
 systemctl start docker
 ```
 
-## 1.3 docker 启动问题汇总
+## 1.4 docker 启动问题汇总
 
 [Cannot connect to the Docker daemon at unix:///var/run/docker.sock. Is the docker daemon running](https://blog.csdn.net/qq_42114918/article/details/81840335)
 
@@ -47,7 +61,7 @@ systemctl restart docker.service
 
 ## 2.1 镜像操作
 
-[Docker 镜像加速 | 菜鸟教程 (runoob.com)](https://www.runoob.com/docker/docker-mirror-acceleration.html)
+
 
 ![镜像操作](D:/code/laolan/landocx/landocx/16.%E8%BF%90%E7%BB%B4/10.Docker/assets/%E9%95%9C%E5%83%8F%E6%93%8D%E4%BD%9C.png)
 
