--- a/16.运维/10.Docker/13.安装mysql.md
+++ b/16.运维/10.Docker/13.安装mysql.md
@@ -24,6 +24,7 @@ quick
 [mysql]
 no-auto-rehash
 default-character-set=utf8
+socket=/var/lib/mysql/mysql.sock
 [client]
 default-character-set=utf8
 socket=/var/lib/mysql/mysql.sock
@@ -31,6 +32,7 @@ socket=/var/lib/mysql/mysql.sock
 # basedir=/usr/local/mysql
 # tmpdir=/data/mysql/tmp
 datadir=/var/lib/mysql
+socket=/var/lib/mysql/mysql.sock
 default_authentication_plugin=mysql_native_password
 port=3306
 user=mysql
@@ -39,10 +41,13 @@ lower_case_table_names = 1
 default_storage_engine = InnoDB
 wait_timeout=31536000
 interactive_timeout=31536000
+skip-name-resolve
 # skip-grant-tables	先试用这个跳过密码，然后用完后又删除掉
 ```
 
 挂载目录和数据
+
+注意：有些人是conf 挂载到/etc/mysql/conf.d
 
 ```shell
 docker pull mysql:5.7.32
