--- a/16.运维/10.Docker/17.安装zookeeper.md
+++ b/16.运维/10.Docker/17.安装zookeeper.md
@@ -13,7 +13,8 @@ docker安装zookeeper单机版: https://blog.csdn.net/xiaojin21cen/article/detai
 ```shell
 docker pull zookeeper:3.4.10
 
-docker run -d --name zookeeper-test  --restart=always -p 12181:2181 \
+docker run -d  --privileged=true --name zookeeper-test  --restart=always -p 12181:2181 \
+-v /data/soft/zookeeper-3.4.10/conf:/conf \
 -v /data/soft/zookeeper-3.4.10/data/:/data/ \
 -v /data/soft/zookeeper-3.4.10/logs/:/datalog/ \
 zookeeper:3.4.10
@@ -23,11 +24,15 @@ zookeeper:3.4.10
 
 ## 1.3 集群配置文件安装
 
+https://blog.csdn.net/u010451450/article/details/88391237
+
 docker搭建zookeeper集群 https://blog.csdn.net/ypp91zr/article/details/89423878
+
+我的25内网环境(建议conf下的文件都替换)
 
 ```shell
 docker pull zookeeper:3.4.10
-我的25内网环境(建议conf下的文件都替换)
+
 data/myid 分别151， 152 ，153,
 配置文件zoo.cfg
 dataDir=/data
@@ -52,10 +57,9 @@ zkServer.sh status
 192.168.25.151:2181,192.168.25.152:2181,192.168.25.153:2181
 ```
 
-
+公司内网环境(建议conf下的文件都替换)
 
 ```shell
-公司内网环境(建议conf下的文件都替换)
 data/myid 分别129， 130 ，131
 配置文件zoo.cfg
 dataDir=/data
