dockerfile docker-compose

--- a/16.运维/10.Docker/02.安装docker及命令.md
+++ b/16.运维/10.Docker/02.安装docker及命令.md
@@ -27,7 +27,7 @@ Created symlink from /etc/systemd/system/multi‐user.target.wants/docker.ser
 
 ```shell
 vim /etc/docker/daemon.json
-{"registry-mirrors":["https://reg-mirror.qiniu.com/"]}
+{"registry-mirrors":["https://ebzt3fx8.mirror.aliyuncs.com"]}
 
 systemctl daemon-reload
 systemctl restart docker
