--- a/16.运维/10.Docker/13.安装mysql.md
+++ b/16.运维/10.Docker/13.安装mysql.md
@@ -66,3 +66,36 @@ docker exec -it mysql-test bash
 mysql -uroot -p （此时是不需要密码的）
 ```
 
+
+
+docker-compose.yml文件
+
+```yaml
+version: "3.8"
+
+services:
+  mysql-test:
+    image: mysql:5.7.32
+    container_name: mysql-test
+    restart: always
+    ports: 
+      - "13306:3306"
+    volumes:
+      - "/data/soft/mysql-5.7.32/conf:/etc/mysql"
+      - "/data/soft/mysql-5.7.32/logs:/var/log/mysql"
+      - "/data/soft/mysql-5.7.32/data:/var/lib/mysql"
+    environment: 
+       MYSQL_ROOT_PASSWORD: 'bmsoft@123'
+    networks:
+      hx_net:
+        ipv4_address: 11.11.11.4
+        
+networks:
+  hx_net:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 11.11.11.0/16
+          gateway: 11.11.11.0
+```
+
