--- a/16.运维/10.Docker/14.安装redis.md
+++ b/16.运维/10.Docker/14.安装redis.md
@@ -36,3 +36,31 @@ docker run -p 16379:6379 --name redis-test \
 -d redis:5.0.10 redis-server /etc/redis/redis.conf --appendonly yes
 ```
 
+编写docker-compose.yml
+
+```yaml
+version: "3.8"
+
+services:
+  redis-test:
+    image: redis:5.0.10
+    container_name: redis-test
+    command: redis-server /etc/redis/redis.conf
+    ports: 
+      - "16379:6379"
+    volumes:
+      - "/data/soft/redis-5.0.10/conf/redis.conf:/etc/redis/redis.conf"
+      - "/data/soft/redis-5.0.10/data:/data"
+    networks:
+      hx_net:
+        ipv4_address: 11.11.11.3
+       
+ networks:
+  hx_net:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 11.11.11.0/16
+          gateway: 11.11.11.0
+```
+
