--- a/16.运维/10.Docker/16.安装rabbitmq.md
+++ b/16.运维/10.Docker/16.安装rabbitmq.md
@@ -16,3 +16,21 @@ docker run -d --name rabbitmq-test -e RABBITMQ_DEFAULT_USER=dam -e "RABBITMQ_DEF
 ## 1.2 配置文件安装
 
 
+
+
+
+编写docker-compose.yml
+
+```yaml
+  rabbitmq-test:
+    image: rabbitmq:3.5.4-management
+    container_name: rabbitmq-test
+    restart: always
+    ports: 
+      - "5682:5672"
+      - "15682:15672"
+    environment: 
+       RABBITMQ_DEFAULT_USER: 'dam'
+       RABBITMQ_DEFAULT_PASS: 'bmsoft@123'
+```
+
