--- a/16.运维/10.Docker/03.Dockerfile.md
+++ b/16.运维/10.Docker/03.Dockerfile.md
@@ -1,10 +1,20 @@
-# 1 常见命令
+#  1 常见命令
 
 ## 1.1 常见命令
 
-ENV 
+### ENV 
 
-RUN
+
+
+### RUN, CMD, ENTRYPOINT
+
+用于运行shell脚本
+
+```shell
+RUN ["./create.sh", "agent@dam", "11.11.11.5:5672", "dam", "bmsoft@123"]
+
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-XX:+DisableAttachMechanism","-agentpath:bin/codelib.so","-jar","kun-metaca-collect-3.5.3-release.jar"]
+```
 
 
 
@@ -13,6 +23,8 @@ RUN
 就是jdk基础上环境自己准备好
 
 参看tomcat加密
+
+参看元数据采集
 
 ```shell
 # （这串数字是我已经创建好一个ubuntu镜像的镜像id，在这里作为tomcat的基础镜像
@@ -65,7 +77,7 @@ ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-XX:+DisableAttach
 
 ```shell
 # （这串数字是我已经创建好一个ubuntu镜像的镜像id，在这里作为tomcat的基础镜像
-FROM centos     
+FROM java:8     
 MAINTAINER laolan
 # （这个环境变量用来表名该镜像模板的最后更新时间）
 ENV REFRESHED_AT 2020-12-09  
@@ -74,21 +86,11 @@ ENV LANG C.UTF-8
 
 #切换镜像目录，进入/usr目录
 WORKDIR /usr/local
-#在/usr/下创建jdk目录,用来存放jdk文件
-RUN mkdir jdk1.8.0_144
 #在/usr/下创建tomcat目录，用来存放tomcat
 RUN mkdir tomcat-8.5.53-encrypt
 
-#将宿主机的jdk目录下的文件拷至镜像的/usr/jdk目录下
-ADD jdk1.8.0_144 /usr/local/jdk1.8.0_144/
 #将宿主机的tomcat目录下的文件拷至镜像的/usr/tomcat目录下
 ADD tomcat-8.5.53-encrypt /usr/local/tomcat-8.5.53-encrypt/
-
-#设置环境变量
-ENV JAVA_HOME=/usr/local/jdk1.8.0_144
-ENV JRE_HOME=$JAVA_HOME/jre
-ENV CLASSPATH=.:$JAVA_HOME/lib/dt.jar:$JAVA_HOME/lib/tools.jar:$JRE_HOME/lib:$CLASSPATH
-ENV PATH=/sbin:$JAVA_HOME/bin:$PATH
 
 #公开端口
 EXPOSE 8080
@@ -116,6 +118,26 @@ docker run --name tomcat-3.5.3 --restart=always -p 18088:8080 \
 -v /data/product/tomcat-8.5.53-encrypt/webapps:/usr/local/tomcat-8.5.53-encrypt/webapps \
 -v /data/product/tomcat-8.5.53-encrypt/logs:/usr/local/tomcat-8.5.53-encrypt/logs \
 -d tomcat-8.5.53-encrypt:3.5.3
+```
+
+
+
+使用docker-compose.yml
+
+```yaml
+services:
+  tomcat-3.5.3:
+    build:
+      context: ./tomcat-8.5.53
+      dockerfile: Dockerfile
+    image: tomcat-8.5.53-encrypt:3.5.3
+    container_name: tomcat-3.5.3
+    restart: always
+    ports: 
+      - "18088:8080"
+    volumes:
+      - "/data/product/tomcat-8.5.53-encrypt/webapps:/usr/local/tomcat-8.5.53-encrypt/webapps"
+      - "/data/product/tomcat-8.5.53-encrypt/logs:/usr/local/tomcat-8.5.53-encrypt/log"
 ```
 
 
@@ -185,7 +207,23 @@ docker run --name kun-metaca-collect-3.5.3 --restart=always -p 19091:9091 \
 -d kun-metaca-collect-encrypt:3.5.3
 ```
 
-### 3.2.2 安装数据质量
+使用docker-compose.yml
+
+```yaml
+  kun-metaca-collect-3.5.3:
+    build:
+      context: ./kun-metaca-collect
+      dockerfile: Dockerfile
+    image: kun-metaca-collect-encrypt:3.5.3
+    container_name: kun-metaca-collect-3.5.3
+    restart: always
+    ports: 
+      - "19091:9091"
+```
+
+
+
+### 3.2.3 安装数据质量
 
 Dockfile
 
@@ -230,3 +268,287 @@ docker run --name kun-dam-dqc-3.5.3 --restart=always -p 19092:9092 \
 -d kun-dam-dqc-encrypt:3.5.3
 ```
 
+
+
+使用docker-compose.yml
+
+```yaml
+  kun-dam-dqc-3.5.3:
+    build:
+      context: ./kun-dam-dqc
+      dockerfile: Dockerfile
+    image: kun-dam-dqc-encrypt:3.5.3
+    container_name: kun-dam-dqc-3.5.3
+    restart: always
+    ports: 
+      - "19092:9092"
+```
+
+
+
+### 3.2.4 安装dp-client
+
+Dockfile
+
+WORKDIR kun-dpexec-client-3.5.3
+
+```shell
+# （这串数字是我已经创建好一个ubuntu镜像的镜像id，在这里作为tomcat的基础镜像
+FROM java:8     
+MAINTAINER laolan
+# （这个环境变量用来表名该镜像模板的最后更新时间）
+ENV REFRESHED_AT 2020-12-11  
+#  Tomcat 编码 和 docker 环境一致
+ENV LANG C.UTF-8
+
+VOLUME /tmp
+
+#切换镜像目录，进入/usr目录
+WORKDIR /usr/local
+#在/usr/下创建tomcat目录，用来存放tomcat
+RUN mkdir kun-dpexec-client-3.5.3
+
+#将宿主机的tomcat目录下的文件拷至镜像的/usr/tomcat目录下
+ADD kun-dpexec-client-3.5.3 kun-dpexec-client-3.5.3/
+
+#公开端口
+EXPOSE 8818
+WORKDIR kun-dpexec-client-3.5.3
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-XX:+DisableAttachMechanism","-agentpath:bin/codelib.so","-jar","kun-dpexec-client-3.5.3.jar"]
+```
+
+```properties
+zookeeper
+	zk.hosts=192.168.0.129:12181,192.168.0.130:12181,192.168.0.131:12181
+mysql	
+	spring.datasource.url = jdbc:mysql://172.17.0.6:3306/kun_dam
+```
+
+```shell
+docker build -t kun-dpexec-client-encrypt:3.5.3 .
+
+docker run --name kun-dpexec-client-3.5.3 --restart=always -p 18818:8818 \
+-d kun-dpexec-client-encrypt:3.5.3
+```
+
+使用docker-compose.yml
+
+```yaml
+  kun-dpexec-client-3.5.3:
+    build:
+      context: ./kun-dpexec-client
+      dockerfile: Dockerfile
+    image: kun-dpexec-client-encrypt:3.5.3
+    container_name: kun-dpexec-client-3.5.3
+    restart: always
+    ports: 
+      - "18818:8818"
+```
+
+
+
+### 3.2.4 安装dp-server,datax
+
+Dockfile
+
+WORKDIR kun-dpexec-server-3.5.3
+
+```shell
+# （这串数字是我已经创建好一个ubuntu镜像的镜像id，在这里作为tomcat的基础镜像
+FROM java:8     
+MAINTAINER laolan
+# （这个环境变量用来表名该镜像模板的最后更新时间）
+ENV REFRESHED_AT 2020-12-11  
+#  Tomcat 编码 和 docker 环境一致
+ENV LANG C.UTF-8
+
+VOLUME /tmp
+
+#切换镜像目录，进入/usr目录
+WORKDIR /usr/local
+#在/usr/下创建tomcat目录，用来存放tomcat
+RUN mkdir datax
+RUN mkdir kun-dpexec-server-3.5.3
+
+#将宿主机的tomcat目录下的文件拷至镜像的/usr/tomcat目录下
+ADD datax datax/
+ADD kun-dpexec-server-3.5.3 kun-dpexec-server-3.5.3/
+
+#公开端口
+EXPOSE 8011
+WORKDIR kun-dpexec-server-3.5.3
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-XX:+DisableAttachMechanism","-agentpath:bin/codelib.so","-jar","kun-dpexec-server-3.5.3.jar"]
+```
+
+```properties
+zookeeper
+	zk.hosts=192.168.0.129:12181,192.168.0.130:12181,192.168.0.131:12181
+mysql	
+	spring.datasource.url = jdbc:mysql://172.17.0.6:3306/kun_dam
+	
+datax
+	baseHome=/usr/local/datax
+```
+
+```shell
+docker build -t kun-dpexec-server-encrypt:3.5.3 .
+
+docker run --name kun-dpexec-server-3.5.3 --restart=always -p 18011:8011 \
+-d kun-dpexec-server-encrypt:3.5.3
+```
+
+使用docker-compose.yml
+
+```yaml
+  kun-dpexec-server-3.5.3:
+    build:
+      context: ./kun-dpexec-server
+      dockerfile: Dockerfile
+    image: kun-dpexec-server-encrypt:3.5.3
+    container_name: kun-dpexec-server-3.5.3
+    restart: always
+    ports: 
+      - "18011:8011"
+```
+
+
+
+### 3.2.5 安装job-server-deploy
+
+Dockfile
+
+WORKDIR kun-job-server-deploy-4.0.0
+
+```shell
+# （这串数字是我已经创建好一个ubuntu镜像的镜像id，在这里作为tomcat的基础镜像
+FROM java:8     
+MAINTAINER laolan
+# （这个环境变量用来表名该镜像模板的最后更新时间）
+ENV REFRESHED_AT 2020-12-11  
+#  Tomcat 编码 和 docker 环境一致
+ENV LANG C.UTF-8
+
+VOLUME /tmp
+
+#切换镜像目录，进入/usr目录
+WORKDIR /usr/local
+#在/usr/下创建tomcat目录，用来存放tomcat
+RUN mkdir kun-job-server-deploy-4.0.0
+
+#将宿主机的tomcat目录下的文件拷至镜像的/usr/tomcat目录下
+ADD kun-job-server-deploy-4.0.0 kun-job-server-deploy-4.0.0/
+
+#公开端口
+EXPOSE 8185
+WORKDIR kun-job-server-deploy-4.0.0
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","kun-job-server-deploy-4.0.0.jar"]
+```
+
+```properties
+mysql	
+	spring.datasource.url = jdbc:mysql://172.17.0.6:3306/kun_dam
+rabbitmq
+	mq.addresses=172.17.0.4:5672
+dpClient
+	dpClient.ip=172.17.0.12
+```
+
+```shell
+docker build -t kun-job-server-deploy:4.0.0 .
+
+docker run --name kun-job-server-deploy-4.0.0 --restart=always -p 18185:8185 \
+-d kun-job-server-deploy:4.0.0
+```
+
+
+
+使用docker-compose.yml
+
+```yaml
+  kun-job-server-deploy-4.0.0:
+    build:
+      context: ./kun-job-server-deploy
+      dockerfile: Dockerfile
+    image: kun-job-server-deploy:4.0.0
+    container_name: kun-job-server-deploy-4.0.0
+    restart: always
+    ports: 
+      - "18185:8185"
+```
+
+
+
+### 3.2.5 安装job-agent
+
+```shell
+[docker@bmsoft02 sbin]$ ./create.sh agent@docker2 172.17.0.4:5672 dam2 bmsoft@123
+生成bin
+../config/agent@docker
+mkdir: created directory ‘../config/agent@docker’
+```
+
+使用 Dockfile 改写
+
+WORKDIR kun-job-agent-4.0.0
+
+```shell
+# （这串数字是我已经创建好一个ubuntu镜像的镜像id，在这里作为tomcat的基础镜像
+FROM java:8     
+MAINTAINER laolan
+# （这个环境变量用来表名该镜像模板的最后更新时间）
+ENV REFRESHED_AT 2020-12-11  
+#  Tomcat 编码 和 docker 环境一致
+ENV LANG C.UTF-8
+
+VOLUME /tmp
+
+#切换镜像目录，进入/usr目录
+WORKDIR /usr/local
+#在/usr/下创建tomcat目录，用来存放tomcat
+RUN mkdir kun-job-agent-4.0.0
+
+#将宿主机的tomcat目录下的文件拷至镜像的/usr/tomcat目录下
+ADD kun-job-agent-4.0.0 kun-job-agent-4.0.0/
+
+# 执行 ./create.sh agent@dam 11.11.11.5:5672 dam bmsoft@123 写mq主节点
+WORKDIR kun-job-agent-4.0.0/sbin
+RUN ["./create.sh", "agent@dam", "11.11.11.5:5672", "dam", "bmsoft@123"]
+
+#运行jar
+WORKDIR ../
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-Dfile.encoding=UTF-8","-jar","kun-job-agent-4.0.0.jar","config/agent@dam/*.xml"]
+```
+
+```shell
+docker build -t kun-job-agent:4.0.0 .
+
+docker run --name kun-job-agent-4.0.0 --restart=always \
+ kun-job-agent:4.0.0
+```
+
+使用docker-compose.yml
+
+```yaml
+version: "3.8"
+
+services:  
+  kun-job-agent-4.0.0:
+    build:
+      context: ./kun-job-agent
+      dockerfile: Dockerfile
+    image: kun-job-agent:4.0.0
+    container_name: kun-job-agent-4.0.0
+    restart: always
+     restart: always
+    networks:
+      hx_net:
+        ipv4_address: 11.11.11.17
+
+networks:
+  hx_net:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 11.11.11.0/24
+          gateway: 11.11.11.1
+```
