--- a/16.运维/10.Docker/09.Docker安装Portainer.md
+++ b/16.运维/10.Docker/09.Docker安装Portainer.md
@@ -26,6 +26,34 @@ docker run -d --privileged=true  -p 29000:9000  \
 portainer/portainer:1.24.1
 ```
 
+编写docker-compose.xml
+
+```yaml
+services:
+  portainer:
+    image: portainer/portainer:1.24.1
+    container_name: portainer
+    privileged: true
+    restart: always
+    ports: 
+      - "29000:9000"
+    volumes:
+      - "/data/soft/portainer/public:/public"
+      - "/var/run/docker.sock:/var/run/docker.sock"
+      - "/data/soft/portainer/data:/data"
+    networks:
+      hx_net:
+        ipv4_address: 11.11.11.2
+        
+networks:
+  hx_net:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 11.11.11.0/16
+          gateway: 11.11.11.0
+```
+
 
 
 ## 1.3 问题
