--- a/16.运维/10.Docker/15.安装nginx.md
+++ b/16.运维/10.Docker/15.安装nginx.md
@@ -13,6 +13,10 @@
 [Docker容器部署 Nginx服务 - 梦徒 - 博客园 (cnblogs.com)](https://www.cnblogs.com/saneri/p/11799865.html)
 
 ```shell
+mkdir html conf.d conf logs cert
+touch conf.d/default.conf 
+# nginx.conf 以及html 文件夹的内容自己上传
+
 docker run -d --name nginx-test -p 180:80 \
 -v /data/soft/nginx-1.18.0/html:/usr/share/nginx/html \
 -v /data/soft/nginx-1.18.0/conf.d/default.conf:/etc/nginx/conf.d/default.conf \
@@ -22,3 +26,41 @@ docker run -d --name nginx-test -p 180:80 \
 nginx:1.18.0
 ```
 
+
+
+docker-compose.yml文件
+
+```yaml
+  nginx-test:
+    image: nginx:1.18.0
+    container_name: nginx-test
+    restart: always
+    ports: 
+      - "180:80"
+    volumes:
+      - "/data/soft/nginx-1.18.0/html:/usr/share/nginx/html"
+      - "/data/soft/nginx-1.18.0/conf.d/default.conf:/etc/nginx/conf.d/default.conf"
+      - "/data/soft/nginx-1.18.0/config/nginx.conf:/etc/nginx/nginx.conf"
+      - "/data/soft/nginx-1.18.0/logs:/var/log/nginx"
+      - "/data/soft/nginx-1.18.0/cert:/etc/nginx/cert"
+   networks:
+      hx_net:
+        ipv4_address: 11.11.11.7
+
+networks:
+  hx_net:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 11.11.11.0/16
+          gateway: 11.11.11.1
+```
+
+
+
+## 1.3 问题
+
+一定要现在docker用户新建文件夹，不然很多莫名其妙的问题
+
+mkdir html conf.d conf logs cert
+touch conf.d/default.conf 
