--- a/16.运维/10.Docker/17.安装zookeeper.md
+++ b/16.运维/10.Docker/17.安装zookeeper.md
@@ -22,6 +22,23 @@ zookeeper:3.4.10
 
 
 
+docker-compose.yml文件
+
+```yaml
+  zookeeper-test-single:
+    image: zookeeper:3.4.10
+    container_name: zookeeper-test-single
+    restart: always
+    ports: 
+      - "12181:2181"
+    volumes:
+      - "/data/soft/zookeeper-3.4.10-single/conf:/conf"
+      - "/data/soft/zookeeper-3.4.10-single/data/:/data/"
+      - "/data/soft/zookeeper-3.4.10-single/logs/:/datalog/"
+```
+
+
+
 ## 1.3 集群配置文件安装
 
 https://blog.csdn.net/u010451450/article/details/88391237
