--- a/16.运维/10.Docker/03.Dockerfile.md
+++ b/16.运维/10.Docker/03.Dockerfile.md
@@ -10,13 +10,19 @@
 
 用于运行shell脚本
 
+https://www.cnblogs.com/klvchen/p/9238410.html
+
 ```shell
 RUN ["./create.sh", "agent@dam", "11.11.11.5:5672", "dam", "bmsoft@123"]
 
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-XX:+DisableAttachMechanism","-agentpath:bin/codelib.so","-jar","kun-metaca-collect-3.5.3-release.jar"]
 ```
 
+### ADD
 
+https://www.simapple.com/363.html
+
+`<src>` 必须在build的资源目录中; 不可以使用 `ADD ../something /something`, 因为 `docker build` 的第一步就需要帮资源目录和子目录发送给 docker daemon.
 
 ## 1.2 自带包
 
@@ -65,6 +71,29 @@ ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-XX:+DisableAttach
 
 
 
+## 1.4 问题
+
+### 1.4.1 tomcat日志乱码
+
+[解决docker容器中文乱码，修改docker容器编码格式](https://www.cnblogs.com/z-belief/p/6148463.html)
+
+```shelll
+docker ps
+docker exec -it 1312a3365d5b locale
+在 Dockerfile 加上 ENV LANG C.UTF-8
+再重新打包镜像
+```
+
+### 1.4.2 oracle时区问题
+
+[Dockerfile 时区设置](https://www.cnblogs.com/linjiqin/p/10607800.html)
+
+```dockerfile
+# 统一设置为东八区
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+RUN echo 'Asia/Shanghai' >/etc/timezone
+```
+
 
 
 # 2 安装加密tomat
@@ -91,6 +120,10 @@ RUN mkdir tomcat-8.5.53-encrypt
 
 #将宿主机的tomcat目录下的文件拷至镜像的/usr/tomcat目录下
 ADD tomcat-8.5.53-encrypt /usr/local/tomcat-8.5.53-encrypt/
+
+# 统一设置为东八区
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+RUN echo 'Asia/Shanghai' >/etc/timezone
 
 #公开端口
 EXPOSE 8080
@@ -187,6 +220,10 @@ RUN mkdir kun-metaca-collect-3.5.3
 #将宿主机的tomcat目录下的文件拷至镜像的/usr/local/kun-metaca-collect-3.5.3目录下
 ADD kun-metaca-collect-3.5.3 /usr/local/kun-metaca-collect-3.5.3/
 
+# 统一设置为东八区
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+RUN echo 'Asia/Shanghai' >/etc/timezone
+
 #公开端口
 EXPOSE 9091
 WORKDIR kun-metaca-collect-3.5.3
@@ -247,6 +284,10 @@ RUN mkdir kun-dam-dqc-3.5.3
 
 #将宿主机的tomcat目录下的文件拷至镜像的/usr/tomcat目录下
 ADD kun-dam-dqc-3.5.3 /usr/local/kun-dam-dqc-3.5.3/
+
+# 统一设置为东八区
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+RUN echo 'Asia/Shanghai' >/etc/timezone
 
 #公开端口
 EXPOSE 9092
@@ -311,6 +352,10 @@ RUN mkdir kun-dpexec-client-3.5.3
 #将宿主机的tomcat目录下的文件拷至镜像的/usr/tomcat目录下
 ADD kun-dpexec-client-3.5.3 kun-dpexec-client-3.5.3/
 
+# 统一设置为东八区
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+RUN echo 'Asia/Shanghai' >/etc/timezone
+
 #公开端口
 EXPOSE 8818
 WORKDIR kun-dpexec-client-3.5.3
@@ -374,6 +419,10 @@ RUN mkdir kun-dpexec-server-3.5.3
 ADD datax datax/
 ADD kun-dpexec-server-3.5.3 kun-dpexec-server-3.5.3/
 
+# 统一设置为东八区
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+RUN echo 'Asia/Shanghai' >/etc/timezone
+
 #公开端口
 EXPOSE 8011
 WORKDIR kun-dpexec-server-3.5.3
@@ -388,6 +437,10 @@ mysql
 	
 datax
 	baseHome=/usr/local/datax
+	
+dp-server
+	com.kun.dpServer.ip=11.11.11.15
+	server.port=8011
 ```
 
 ```shell
@@ -437,6 +490,10 @@ RUN mkdir kun-job-server-deploy-4.0.0
 
 #将宿主机的tomcat目录下的文件拷至镜像的/usr/tomcat目录下
 ADD kun-job-server-deploy-4.0.0 kun-job-server-deploy-4.0.0/
+
+# 统一设置为东八区
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+RUN echo 'Asia/Shanghai' >/etc/timezone
 
 #公开端口
 EXPOSE 8185
@@ -513,6 +570,10 @@ ADD kun-job-agent-4.0.0 kun-job-agent-4.0.0/
 # 执行 ./create.sh agent@dam 11.11.11.5:5672 dam bmsoft@123 写mq主节点
 WORKDIR kun-job-agent-4.0.0/sbin
 RUN ["./create.sh", "agent@dam", "11.11.11.5:5672", "dam", "bmsoft@123"]
+
+# 统一设置为东八区
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+RUN echo 'Asia/Shanghai' >/etc/timezone
 
 #运行jar
 WORKDIR ../
