--- a/16.运维/10.Docker/04.DockerCompose.md
+++ b/16.运维/10.Docker/04.DockerCompose.md
@@ -32,7 +32,7 @@ docker-compose --version
 
 ```shell
 docker-compose up -d 
-docker-compose up -d  kun-job-agent-4.0.0 --bulid
+docker-compose up -d --bulid kun-metaca-collect-3.5.3 
 ```
 
 
@@ -75,21 +75,38 @@ docker-compose version 1.27.4, build 40524192
     restart: always
 ```
 
-###  volumes
+#### “-”的使用
 
-https://www.cnblogs.com/lori/p/9843190.html
+携带字符串
 
 ```yaml
-绝对路径的
+    environment: 
+      MYSQL_ROOT_PASSWORD: 'bmsoft@123' 等效
+    environment: 
+      - MYSQL_ROOT_PASSWORD=bmsoft@123 或者 "MYSQL_ROOT_PASSWORD=bmsoft@123"
+```
+
+
+
+####  volumes/bind mounts/tmpfs
+
+[数据卷](https://www.cnblogs.com/edisonchou/p/docker_volumes_introduction.html)
+
+```yaml
+绝对路径的（bind mounts）
 	volumes:
-    	- ./ghost/config.js:/var/lib/ghost/config.js
-卷标的
-      volumes:
-    - mysql:/var/lib/mysql
+       - ./ghost/config.js:/var/lib/ghost/config.js
+卷标的（volumes）
+     volumes:
+       - mysql:/var/lib/mysql
 ...
 volumes:
  mysql:	
 ```
+
+如果实在不知道数据卷在哪儿，可以先volumes，启动起来，再bind mounts 去替换路径
+
+![容器mounts](./assets/容器mounts.png)
 
 ### networks:
 
