--- a/16.运维/10.Docker/02.安装docker及命令.md
+++ b/16.运维/10.Docker/02.安装docker及命令.md
@@ -59,13 +59,15 @@ systemctl restart docker.service
 
 # 2 命令
 
-## 2.1 镜像操作
+## 2.1 镜像容器
+
+### 2.1.1 镜像操作
 
 
 
 ![镜像操作](D:/code/laolan/landocx/landocx/16.%E8%BF%90%E7%BB%B4/10.Docker/assets/%E9%95%9C%E5%83%8F%E6%93%8D%E4%BD%9C.png)
 
-## 2.2  容器操作
+### 2.2.2  容器操作
 
 ![容器操作](D:/code/laolan/landocx/landocx/16.%E8%BF%90%E7%BB%B4/10.Docker/assets/容器操作.png)
 
@@ -77,7 +79,7 @@ run
 
 
 
-## 2.3 demo
+### 2.1.3 demo
 
 软件镜像（QQ安装程序）----运行镜像----产生一个容器（正在运行的软件，运行的QQ）；
 
@@ -113,12 +115,24 @@ https://docs.docker.com/engine/reference/commandline/docker/
 可以参考每一个镜像的文档
 ```
 
-## 2.4 镜像容器迁移
+## 2.2 镜像与容器区别
+
+每次操后，必须将需要的东西弄到images
+
+因为每次重启后，容器里的新建的东西（ps:kun-dp-cliient）会消失
+
+
+
+## 2.3 镜像容器迁移
 
 [docker服务迁移(从一台服务器到另一台服务器)_我在北国不背锅的博客-CSDN博客](https://blog.csdn.net/weixin_44455388/article/details/107539559)
 
-```
-docker save [images] [images] > [name.tar]
+```shell
+# docker commit 容器名称 镜像名称
+docker commit dm8-data-test dm8:test-2
+docker imagses
+docker save dm8:test-2 > dm8_data.tar
+# 切换另个服务掐
 docker load < xxx.tar 或 docker load -i xxx.tar
 ```
 
