--- a/01.java/01.javase/08.多线程/24.锁.md
+++ b/01.java/01.javase/08.多线程/24.锁.md
@@ -183,9 +183,45 @@ lock.lock.TryLockDeadlock	用tryLock来避免死锁
 
 ![悲观锁](./assets/悲观锁.png)
 
+#### 特性1：**互斥形**
+
+![互斥形](./assets/互斥形.png) 
+
+#### 特性2：**可见性**
+
+![可见性](./assets/可见性.png)
+
 #### 悲观锁执行流程
 
 ![悲观锁执行流程](./assets/悲观锁执行流程.png)
+
+####  **锁池和等待池**
+
+锁池EntryList，等待池WaitSet，调用进入等待池
+
+![锁池和等待池](./assets/锁池和等待池.png)
+
+#### **释放锁的操作**
+
+> **会释放**
+
+1.当前线程的同步方法、同步代码块执行结束
+
+2.当前线程在同步代码块、同步方法中遇到break、return终止了该代码块、该方法的继续执行。
+
+3.当前线程在同步代码块、同步方法中出现了未处理的Error或Exception，导致异常结束
+
+4.当前线程在同步代码块、同步方法中执行了线程对象的wait()方法，当前线程暂停，并释放锁。
+
+ 
+
+> **不会释放**
+
+1.线程执行同步代码块或同步方法时，程序调用Thread.sleep()、Thread.yield()方法暂停当前线程的执行
+
+2.线程执行同步代码块时，其他线程调用了该线程的suspend()方法将该线程挂起，该线程不会释放锁（同步监视器）。应尽量避免使用suspend()和resume()来控制线程
+
+
 
 ### 乐观锁
 
