--- a/11.微服务/10.SpringCloud/01.微服务及SpringCloud.md
+++ b/11.微服务/10.SpringCloud/01.微服务及SpringCloud.md
@@ -20,7 +20,7 @@
 
 当网站流量很小时，只需一个应用，将所有功能都部署在一起，以减少部署节点和成本。此时，用于简化增删改查工作量的数据访问框架(ORM)是影响项目开发的关键。
 
- ![1525529091749](assets/1525529091749.png)
+ ![](./assets/1525529091749.png)
 
 存在的问题：
 
