--- a/01.java/01.javase/08.多线程/02.核心1-创建线程.md
+++ b/01.java/01.javase/08.多线程/02.核心1-创建线程.md
@@ -67,17 +67,7 @@
 
 
 
-
-
-##  1.3 创建线程扩展
-
-### 1.3.1 **实现Callable接口**
-
-使用继承方式的好处是方便传参，你可以在子类里面添加成员变量，通过set方法设置参数或者通过构造函数进行传递，而如果使用Runnable方式，则只能使用主线程里面被声明为final的变量。
-
-不好的地方是Java不支持多继承，如果继承了Thread类，那么子类不能再继承其他类，而Runable则没有这个限制。前两种方式都没办法拿到任务的返回结果，但是Callable方式可以
-
-### 1.3.2  **匿名内部类实现方式**
+### 1.2.3  **匿名内部类实现方式**
 
 ![匿名内部类实现方式](./assets/匿名内部类实现方式.png)
 
@@ -138,7 +128,7 @@ https://blog.csdn.net/saycheesenn/article/details/52956331
 
  
 
-#### 2.4.3.2 **线程池获取**
+#### 2.4.3.2 **线程池Future获取**
 
 ![线程池获取](./assets/线程池获取.png)
 
