--- a/08.javaEE扩展/03.消息/03.amqp-rabbitmq/02.五种消息模型.md
+++ b/08.javaEE扩展/03.消息/03.amqp-rabbitmq/02.五种消息模型.md
@@ -86,23 +86,25 @@ public class ConnectionUtil {
 
 ## 1.2 发送方式概览
 
-基本消息模型：P(1)->队列->C(1)
+消费者: 情况1.不同类型	情况2.同类型不同节点
 
-work消息模型p2p: P(1)->队列->C(n),只能有一个被抢占
+
+
+基本消息模型：P->队列->C(1)
+
+work消息模型p2p: P->队列->C(n),只能有一个被抢占
 
 订阅模型
 
-​	订阅模型-Fanout： P(1)->交换机->绑定的队列->C(n),实现一条消息被多个消费者消费
+​	订阅模型-Fanout： P->交换机->所有绑定队列->C(n),实现一条消息被多个消费者（情况12）消费
 
 ​	订阅模型-Direct（有选择性的接收消息，RoutingKey）：
 
-​			P(1)->交换机->正确的结果队列->C(n),实现一条消息被多个消费者消费
-
-​					     ->错误的结果队列->C(n),实现一条消息被多个消费者消费
+​			P->交换机->完全匹配绑定队列->C(n),实现一条消息被多个消费者（情况2）消费
 
 ​	订阅模型-Topic（上面的升级版）绑定`Routing key` 的时候使用通配符
 
-​			
+​			P->交换机->通配符匹配绑定队列->C(n),实现一条消息被多个消费者（情况12）消费
 
 # 2.五种消息模型
 
@@ -110,7 +112,7 @@ work消息模型p2p: P(1)->队列->C(n),只能有一个被抢占
 
 官方介绍：
 
-RabbitMQ是一个消息代理：它接受和转发消息。 你可以把它想象成一个邮局：当你把邮件放在邮箱里时，你可以确定邮差先生最终会把邮件发送给你的收件人。 在这个比喻中，RabbitMQ是邮政信箱，邮局和邮递员。
+.RabbitMQ是一个消息代理：它接受和转发消息。 你可以把它想象成一个邮局：当你把邮件放在邮箱里时，你可以确定邮差先生最终会把邮件发送给你的收件人。 在这个比喻中，RabbitMQ是邮政信箱，邮局和邮递员。
 
 RabbitMQ与邮局的主要区别是它不处理纸张，而是接受，存储和转发数据消息的二进制数据块。
 
@@ -369,8 +371,8 @@ channel.basicConsume(QUEUE_NAME, false, consumer);
     
     
     
-    
 
+面试题：避免消息堆积？
 面试题：避免消息堆积？
 面试题：避免消息堆积？
 面试题：避免消息堆积？
