mybatis和mybatis plus 的分页插件

--- a/06.java ee/04.mybatis/03.mybatis-plus/02.核心-4.分页插件.md
+++ b/06.java ee/04.mybatis/03.mybatis-plus/02.核心-4.分页插件.md
@@ -1,24 +1,53 @@
-# 1 分页插件
+# 2 分页
 
-## 1.1 spring boot
+## 2.1 引入config
 
 ```java
-//Spring boot方式
+import com.baomidou.mybatisplus.extension.plugins.PaginationInterceptor;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+
 @Configuration
-@MapperScan("com.baomidou.cloud.service.*.mapper*")
 public class MybatisPlusConfig {
-    
-    // 最新版
+
     @Bean
-    public MybatisPlusInterceptor mybatisPlusInterceptor() {
-        MybatisPlusInterceptor interceptor = new MybatisPlusInterceptor();
-        interceptor.addInnerInterceptor(new PaginationInnerInterceptor(DbType.MYSQL));
-        return interceptor;
+    public PaginationInterceptor paginationInterceptor() {
+        return new PaginationInterceptor();
     }
-    
 }
 ```
 
+## 2.2 情况1：自定义sql
 
+注意使用baomidou下的分页
 
-## 1.2 XML 自定义分页
+### 2.2.1 mapper
+
+这里使用IPage或者Page(建议)都可以
+
+```java
+import com.baomidou.mybatisplus.core.metadata.IPage;
+import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
+
+Page<SpreadSysUserResponse> selectSysUsers(IPage<?> page, @Param("request") SpreadSysUserRequest request);
+```
+
+### 2.2.2 service
+
+```java
+// 初始化分页
+IPage<?> page = new Page<>(request.getPageCurrent(), request.getPageSize());
+return R.success(tSpreadSysUserMapper.selectSysUsers(page, request));
+```
+
+## 2.3 情况2：plus下条件构造器
+
+只适用单表
+
+实例具体查询条件
+
+```java
+IPage<TStaffMch> page = new Page<>(requestPage.getPageCurrent(), requestPage.getPageSize());
+IPage<TStaffMch> staffIPage = staffMchMapper.selectPage(page,new QueryWrapper<TStaffMch>().setEntity(staff));
+return R.success(staffIPage);
+```
